--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
 }
 :root {
-  --primaryColor: #af9a7d;
+  --primaryColor: #f9b353;
   --mainWhite: #fff;
   --offWhite: #f7f7f7;
   --mainBlack: #222;
@@ -17,7 +17,7 @@
 }
 /* globals */
 body {
-  padding-top: 66px;
+  /* padding-top: 66px; */
   color: var(--mainBlack);
   background: var(--mainWhite);
   font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -94,9 +94,11 @@ h6 {
   left: 0;
   width: 100%;
   padding: 0.75rem 2rem;
-  background: var(--offWhite);
+  /* background: var(--offWhite); */
+  background: rgba(255, 255, 255, 0.5);
   z-index: 1;
 }
+
 .nav-header {
   display: flex;
   justify-content: space-between;
@@ -121,9 +123,10 @@ h6 {
   display: block;
   text-decoration: none;
   padding: 1rem 0;
-  color: var(--mainBlack);
+  /* color: var(--mainBlack); */
+  color: white;
   transition: var(--mainTransition);
-  text-align: center;
+  text-align: right;
   font-size: 1rem;
   font-weight: 600;
   letter-spacing: var(--mainSpacing);
@@ -158,7 +161,8 @@ h6 {
 /* Hero */
 .defaultHero,
 .roomsHero {
-  min-height: calc(100vh - 66px);
+  /* min-height: calc(100vh - 66px); */
+  min-height: 100vh;
   background: url('./images/defaultBcg.jpeg') center/cover no-repeat;
   display: flex;
   align-items: center;
