--- a/src/App.css
+++ b/src/App.css
@@ -94,8 +94,8 @@ h6 {
   left: 0;
   width: 100%;
   padding: 0.75rem 2rem;
-  /* background: var(--offWhite); */
-  background: rgba(255, 255, 255, 0.5);
+  background: var(--offWhite);
+  /* background: rgba(255, 255, 255, 0.5); */
   z-index: 1;
 }
 
@@ -123,8 +123,8 @@ h6 {
   display: block;
   text-decoration: none;
   padding: 1rem 0;
-  /* color: var(--mainBlack); */
-  color: white;
+  color: var(--mainBlack);
+  /* color: white; */
   transition: var(--mainTransition);
   text-align: right;
   font-size: 1rem;
