--- a/src/App.css
+++ b/src/App.css
@@ -419,7 +419,7 @@ h6 {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(330px, 1fr));
   grid-column-gap: 2rem;
-  grid-row-gap: 1rem;
+  grid-row-gap: 2rem;
 }
 @media screen and (min-width: 992px) {
   .single-room-images,
@@ -502,6 +502,7 @@ h6 {
   display: inline-block;
   font-size: 0.8rem;
   margin-left: 0.5rem;
+  padding: 0.5rem;
 }
 @media screen and (min-width: 776px) {
   .filter-form {
